# llm-adapters

./: .cursorignore  .env.example  .pre-commit-config.yaml  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: check.yml  publish.yml  version-check.yml
adapters/: __init__.py  adapter_factory.py  client_cache.py  constants.py  custom_sdk_chat_provider_adapter.py  general_utils.py  types.py
adapters/abstract_adapters/: api_key_adapter_mixin.py  base_adapter.py  openai_sdk_chat_adapter.py  provider_adapter_mixin.py  sdk_chat_adapter.py
adapters/provider_adapters/: __init__.py  anthropic_sdk_chat_provider_adapter.py  deepinfra_sdk_chat_provider_adapter.py  deepseek_sdk_chat_provider_adapter.py  fireworks_sdk_chat_provider_adapter.py  gemini_sdk_chat_provider_adapter.py  lambdalambs_sdk_chat_provider_adapter.py  openai_sdk_chat_provider_adapter.py  together_sdk_chat_provider_adapter.py
docs/: generate.py
llm-adapters/: types.py
llm-adapters/abstract_adapters/: base_adapter.py
llm-adapters/provider_adapters/: anthropic_sdk_chat_provider_adapter.py
llm_adapters/: __init__.py  adapter_factory.py  client.py  custom_sdk_chat_provider_adapter.py  general_utils.py
llm_adapters/abstract_adapters/: __init__.py  adapter.py  openai_sdk_chat_adapter.py  provider_adapter_mixin.py  sdk_chat_adapter.py
llm_adapters/provider_adapters/: __init__.py  ai21_sdk_chat_provider_adapter.py  amazon_bedrokcs_provider_adapter.py  anthropic_sdk_chat_provider_adapter.py  azure_sdk_chat_provider_adapter.py  bedrock_sdk_provider_adapter.py  bigmodel_provider_adapter.py  cerebras_sdk_chat_provider_adapter.py  cohere_sdk_chat_provider_adapter.py  databricks_sdk_chat_provider_adapter.py  deepinfra_sdk_chat_provider_adapter.py  deepseek_sdk_chat_provider_adapter.py  fireworks_sdk_chat_provider_adapter.py  gemini_sdk_chat_provider_adapter.py  groq_sdk_chat_provider_adapter.py  lambdalabs_sdk_chat_provider_adapter.py  lepton_sdk_chat_provider_adapter.py  moescape_sdk_chat_provider_adapter.py  moonshot_sdk_chat_provider_adapter.py  octoai_sdk_chat_provider_adapter.py  openai_sdk_chat_provider_adapter.py  openrouter_sdk_chat_provider_adapter.py  perplexity_sdk_chat_provider_adapter.py  (+4 more)
tests/: conftest.py  utils.py
(+4796 files in other folders)
