[tool.poetry]
name = "martian-adapters"
version = "7.9.1"
description = "Adapters as API gateways to Different LLM Models"
authors = ["Martian team <team@withmartian.com>"]
readme = "README.md"
packages = [{ include = "adapters", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
anthropic = "^0.42.0"
openai = "^1.59.3"
cohere = "^5.13.5"
brotli = "^1.1.0"
httpx = {version = "^0.28.1", extras = ["http2"]}

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.24.0"
pytest-recording = "^0.13.2"
mypy = "^1.13.0"
vcrpy = "^6.0.2"
ruff = "^0.7.2"
pytest-xdist = "^3.6.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
