[tool.poetry]
name = "llm-adapters"
version = "8.1.0"
description = "Adapters as API gateways to Different LLM Models"
authors = ["Martian team <team@withmartian.com>"]
readme = "README.md"
packages = [{ include = "llm_adapters", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
anthropic = "^0.49.0"
openai = "^1.68.2"
cohere = "^5.14.0"
brotli = "^1.1.0"
httpx = "^0.28.1"
boto3 = "^1.37.23"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.25.2"
pytest-recording = "^0.13.2"
mypy = "^1.14.1"
vcrpy = "^7.0.0"
ruff = "^0.11.2"
pytest-xdist = "^3.6.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
